--- a/style/style.css
+++ b/style/style.css
@@ -262,11 +262,10 @@ header .logo a {
   box-shadow: 1px 10px 15px -1px rgba(255, 255, 255, 0.3);
   transition: 0.2s;
 }
-
-    .large-image {
+.large-image {
         width: 100%;
-        max-width: 800px; /* or whatever size you prefer */
-        height: auto; /* This maintains the aspect ratio */
+        max-width: 2000px; /* or whatever size you prefer */
+        height: auto; 
     }
 
 .col1:hover {
